basic algos for canny, tests and debug needed

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,9 @@
 cmake_minimum_required(VERSION 3.5)
+set(GLOBAL_PROJECT_NAME "cva")
+set(CMAKE_DEBUG_POSTFIX "_d")
+
 project(cv-algos)
 
-add_subdirectory(canny)
+add_subdirectory(core)
+add_subdirectory(primitives)
+add_subdirectory(algorithms)
