--- a/algorithms/CMakeLists.txt
+++ b/algorithms/CMakeLists.txt
@@ -1,23 +1,18 @@
 cmake_minimum_required(VERSION 3.5)
 
-set(PROJECT_NAME "canny")
+set(LIB_NAME "algorithms")
+set(PROJECT_NAME "${GLOBAL_PROJECT_NAME}_${LIB_NAME}")
+
 project(${PROJECT_NAME} LANGUAGES CXX CUDA)
 
-find_package(OpenCV 4.3.0 REQUIRED COMPONENTS core highgui)
-find_package(Eigen3 3.3.7 REQUIRED)
-find_package(CUDA 11.0 REQUIRED)
+find_package(OpenCV 4.3.0 REQUIRED COMPONENTS highgui)
+#find_package(CUDA 11.0 REQUIRED)
 
 add_executable(${PROJECT_NAME}
-    include/gaussianfilter.h
-    include/sobelfilter.h
-    include/cuda_env.h
-    include/cuda_gaussianfilter.cuh
-
-    src/main.cpp
-    src/gaussianfilter.cpp
-    src/sobelfilter.cpp
-    src/cuda_gaussianfilter.cu
+	src/canny_test.cpp
 )
+
+source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR})
 
 set_target_properties(${PROJECT_NAME} PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
 
@@ -26,12 +21,15 @@ target_include_directories(${PROJECT_NAME}
         $<INSTALL_INTERFACE:include>    
         $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
     PRIVATE
+        ${CMAKE_CURRENT_SOURCE_DIR}/../core/include
+        ${CMAKE_CURRENT_SOURCE_DIR}/../primitives/include
         ${CMAKE_CURRENT_SOURCE_DIR}/src
 )
 
 target_link_libraries(${PROJECT_NAME}
     PRIVATE
-        Eigen3::Eigen
         opencv_core
         opencv_highgui
+
+        cva_primitives
 )
