--- a/primitives/tests/test_gradient/CMakeLists.txt
+++ b/primitives/tests/test_gradient/CMakeLists.txt
@@ -1,39 +1,35 @@
 cmake_minimum_required(VERSION 3.5)
 
-set(LIB_NAME "algorithms")
-set(PROJECT_NAME "${GLOBAL_PROJECT_NAME}_${LIB_NAME}")
+set(TEST_NAME gradient)
+set(PROJECT_NAME "test_${TEST_NAME}")
 
 project(${PROJECT_NAME} LANGUAGES CXX CUDA)
 
-find_package(OpenCV 4.3.0 REQUIRED COMPONENTS highgui)
-#find_package(CUDA 11.0 REQUIRED)
-
 add_executable(${PROJECT_NAME}
-    include/cannyedgedetector.h
-
-    src/cannyedgedetector.cpp
-    src/canny_test.cpp
+    ${PROJECT_NAME}.cpp
 )
 
 set_target_properties(${PROJECT_NAME} PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
+#set_target_properties(${PROJECT_NAME} PROPERTIES CUDA_RESOLVE_DEVICE_SYMBOLS ON)
+set_target_properties(${PROJECT_NAME} PROPERTIES CUDA_ARCHITECTURES OFF)
 
 target_include_directories(${PROJECT_NAME}
 	PUBLIC
         $<INSTALL_INTERFACE:include>    
         $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
     PRIVATE
-        ${CMAKE_CURRENT_SOURCE_DIR}/../core/include
-        ${CMAKE_CURRENT_SOURCE_DIR}/../primitives/include
+        ${CMAKE_CURRENT_SOURCE_DIR}/../../include
         ${CMAKE_CURRENT_SOURCE_DIR}/src
 )
 
 target_link_libraries(${PROJECT_NAME}
     PRIVATE
-        opencv_core
+        GTest::gtest
         opencv_highgui
+        cudart_static
 
         cva_core
         cva_primitives
 )
 
-add_subdirectory(tests)
+
