fixed gradient dir,  refactor, tests refined, GaussianCuda v2

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,7 @@
 cmake_minimum_required(VERSION 3.5)
 set(GLOBAL_PROJECT_NAME "cva")
 set(CMAKE_DEBUG_POSTFIX "_d")
+set(DATA_ROOT "${CMAKE_CURRENT_SOURCE_DIR}/data")
 
 project(cv-algos)
 
