--- a/algorithms/tests/test_canny/CMakeLists.txt
+++ b/algorithms/tests/test_canny/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.5)
 
-set(TEST_NAME canny)
+set(TEST_NAME "canny")
 set(PROJECT_NAME "test_${TEST_NAME}")
 
 project(${PROJECT_NAME} LANGUAGES CXX CUDA)
@@ -8,6 +8,8 @@ project(${PROJECT_NAME} LANGUAGES CXX CUDA)
 add_executable(${PROJECT_NAME}
     ${PROJECT_NAME}.cpp
 )
+
+target_compile_definitions(${PROJECT_NAME} PRIVATE DATA_ROOT=${DATA_ROOT})
 
 set_target_properties(${PROJECT_NAME} PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
 #set_target_properties(${PROJECT_NAME} PROPERTIES CUDA_RESOLVE_DEVICE_SYMBOLS ON)
@@ -30,6 +32,8 @@ target_link_libraries(${PROJECT_NAME}
 
         cva_core
         cva_primitives
+        cva_algorithms
 )
 
+install(TARGETS ${PROJECT_NAME})
 
