--- a/primitives/tests/CMakeLists.txt
+++ b/primitives/tests/CMakeLists.txt
@@ -2,6 +2,6 @@ cmake_minimum_required(VERSION 3.5)
 
 find_package(GTest 1.10 REQUIRED)
 
-add_subdirectory(test_gaussianfilter)
+add_subdirectory(test_gaussian)
 add_subdirectory(test_gradient)
 add_subdirectory(test_ccl)
