--- a/core/tests/test_custd/CMakeLists.txt
+++ b/core/tests/test_custd/CMakeLists.txt
@@ -1,19 +1,15 @@
-cmake_minimum_required(VERSION 3.5)
+cmake_minimum_required(VERSION 3.8 FATAL_ERROR)
 
 set(TEST_NAME "custd")
 set(PROJECT_NAME "test_${TEST_NAME}")
 
-project(${PROJECT_NAME} LANGUAGES CXX CUDA)
+project(${PROJECT_NAME} LANGUAGES CXX)
 
 add_executable(${PROJECT_NAME}
     ${PROJECT_NAME}.cpp
 )
 
 target_compile_definitions(${PROJECT_NAME} PRIVATE DATA_ROOT=${DATA_ROOT})
-
-set_target_properties(${PROJECT_NAME} PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
-#set_target_properties(${PROJECT_NAME} PROPERTIES CUDA_RESOLVE_DEVICE_SYMBOLS ON)
-set_target_properties(${PROJECT_NAME} PROPERTIES CUDA_ARCHITECTURES OFF)
 
 target_include_directories(${PROJECT_NAME}
     PUBLIC
@@ -27,10 +23,9 @@ target_include_directories(${PROJECT_NAME}
 target_link_libraries(${PROJECT_NAME}
     PRIVATE
         GTest::gtest
-        cudart_static
 
         cva_core
 )
 
-install(TARGETS ${PROJECT_NAME})
+install(TARGETS ${PROJECT_NAME} DESTINATION lib)
 
