--- a/primitives/tests/test_gradient/CMakeLists.txt
+++ b/primitives/tests/test_gradient/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.5)
+cmake_minimum_required(VERSION 3.8 FATAL_ERROR)
 
 set(TEST_NAME "gradient")
 set(PROJECT_NAME "test_${TEST_NAME}")
@@ -12,8 +12,6 @@ add_executable(${PROJECT_NAME}
 target_compile_definitions(${PROJECT_NAME} PRIVATE DATA_ROOT=${DATA_ROOT})
 
 set_target_properties(${PROJECT_NAME} PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
-#set_target_properties(${PROJECT_NAME} PROPERTIES CUDA_RESOLVE_DEVICE_SYMBOLS ON)
-set_target_properties(${PROJECT_NAME} PROPERTIES CUDA_ARCHITECTURES OFF)
 
 target_include_directories(${PROJECT_NAME}
     PUBLIC
@@ -28,7 +26,6 @@ target_link_libraries(${PROJECT_NAME}
     PRIVATE
         GTest::gtest
         opencv_highgui
-        cudart_static
 
         cva_core
         cva_primitives
