--- a/primitives/tests/CMakeLists.txt
+++ b/primitives/tests/CMakeLists.txt
@@ -1,6 +1,7 @@
-cmake_minimum_required(VERSION 3.5)
+cmake_minimum_required(VERSION 3.8 FATAL_ERROR)
 
 find_package(GTest 1.10 REQUIRED)
+find_package(OpenCV 4.3 REQUIRED COMPONENTS highgui)
 
 add_subdirectory(test_gaussian)
 add_subdirectory(test_gradient)
